--- a/index.html
+++ b/index.html
@@ -108,6 +108,64 @@
         </div>
       </div>
     </section>
+    <!-- skills section start -->
+    <section class="skills" id="skills">
+      <div class="max-width">
+        <h2 class="title">My skills</h2>
+        <div class="skills-content">
+          <div class="column left">
+            <div class="text">My creative skills & experiences</div>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet
+              beatae sint aspernatur facilis, voluptatibus fuga sapiente magnam
+              similique harum vitae assumenda quos reiciendis ea repudiandae
+              optio provident, ipsam voluptas dolor placeat earum veritatis
+              natus? Dolor recusandae, saepe impedit soluta repellat laboriosam
+              atque. Iste quod natus qui ducimus laboriosam unde animi, dolores
+              maiores commodi sapiente omnis facere dolore velit ullam
+              accusamus!
+            </p>
+            <a href="#">Read more</a>
+          </div>
+          <div class="column right">
+            <div class="bars">
+              <div class="info">
+                <span>HTML</span>
+                <span>90%</span>
+              </div>
+              <div class="line html"></div>
+            </div>
+            <div class="bars">
+              <div class="info">
+                <span>CSS</span>
+                <span>60%</span>
+              </div>
+              <div class="line css"></div>
+            </div>
+            <div class="bars">
+              <div class="info">
+                <span>JavaScript</span>
+                <span>80%</span>
+              </div>
+              <div class="line js"></div>
+            </div>
+            <div class="bars">
+              <div class="info">
+                <span>Python</span>
+                <span>70%</span>
+              </div>
+              <div class="line python"></div>
+            </div>  
+            <div class="bars">
+              <div class="info">
+                <span>MySql</span>
+                <span>50%</span>
+              </div>
+              <div class="line sql"></div>
+            </div>
+          </div>
+      </div>
+    </section>
 
     <script src="app.js"></script>
   </body>
