--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css"/>
+    
     <!-- bootstrap CSS -->
   </head>
   <body>
@@ -164,6 +168,48 @@
               <div class="line sql"></div>
             </div>
           </div>
+      </div>
+    </section>
+    <!-- teams section start -->
+    <section class="teams" id="teams">
+      <div class="max-width">
+        <h2 class="title">My teams</h2>
+        <div class="carousel owl-carousel">
+          <div class="card">
+            <div class="box">
+              <img src="./images/3211409.png" alt="">
+              <div class="text">Someone Name</div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ut natus magni repellendus animi! Pariatur quod nihil, cumque, iure excepturi hic molestias reprehenderit vero eaque deleniti repudiandae cupiditate, voluptatibus autem.</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="box">
+              <img src="./images/3211409.png" alt="">
+              <div class="text">Someone Name</div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ut natus magni repellendus animi! Pariatur quod
+                nihil, cumque, iure excepturi hic molestias reprehenderit vero eaque deleniti repudiandae cupiditate, voluptatibus
+                autem.</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="box">
+              <img src="./images/3211409.png" alt="">
+              <div class="text">Someone Name</div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ut natus magni repellendus animi! Pariatur quod
+                nihil, cumque, iure excepturi hic molestias reprehenderit vero eaque deleniti repudiandae cupiditate, voluptatibus
+                autem.</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="box">
+              <img src="./images/3211409.png" alt="">
+              <div class="text">Someone Name</div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ut natus magni repellendus animi! Pariatur quod
+                nihil, cumque, iure excepturi hic molestias reprehenderit vero eaque deleniti repudiandae cupiditate, voluptatibus
+                autem.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
