--- a/index.html
+++ b/index.html
@@ -212,7 +212,47 @@
         </div>
       </div>
     </section>
-
+    <!-- contact section start -->
+    <section class="contact" id="contact">
+      <div class="contact">
+        <h2 class="title">Contact me</h2>
+        <div class="contact-content">
+          <div class="column left">
+            <div class="text">
+              Get in touch
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis accusantium odit nemo illum delectus debitis quod aliquam perspiciatis fugiat iure.</p>
+          
+            <div class="icons">
+              <div class="row">
+              <i class="fas fa-user"></i>
+              <div class="info">
+                <div class="head">Name</div>
+                <div class="sub-title">Jorge de Toro</div>
+              </div>
+              </div>
+              <div class="row">
+              <i class="fa-solid fa-location-dot"></i>
+              <div class="info">
+                <div class="head">Adress</div>
+                <div class="sub-title">Las Rozas, Madrid</div>
+              </div>
+              </div>
+              <div class="row">
+              <i class="fas fa-envelope"></i>
+              <div class="info">
+                <div class="head">Email</div>
+                <div class="sub-title">jorgedtoro@gmail.com</div>
+              </div>
+              </div>
+            </div>
+          </div>
+          <div class="column right">
+            
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
