--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
           <div class="column right">
             <div class="text">
-              I'm Jorge and i am <span>Full Stack Developer</span>
+              I'm Jorge and i am <span class="typing2"></span>
             </div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
